@@ -1,3 +1,13 @@
+2011-05-16  Thien-Thi Nguyen  <ttn@gnuvola.org>
+
+	[qcons int] Avoid using literal symbols with ‘#\#’ in the name.
+
+	These cause round-trip problems that vary from
+	one Guile implementation to the next.
+
+	* postgres-qcons.scm (*infix-operations*):
+	Use ‘string->symbol’ for symbols named "#", "##", "?#".
+
 2011-05-15  Thien-Thi Nguyen  <ttn@gnuvola.org>
 
 	[doc] Spiff docstrings; use ‘-args:’ instead of ‘-sig:’.
